feat: route for N messages after a message
