# backend/docs/swagger.json
@@ -19,12 +19,12 @@
       "description": "User actions"
     },
     {
-      "name": "Notifications",
-      "description": "Notification actions"
-    },
-    {
       "name": "Other",
       "description": "Other routes"
+    },
+    {
+      "name": "Chat",
+      "description": "Chat REST routes and async messages"
     }
   ],
   "paths": {
@@ -325,108 +325,6 @@
         }
       }
     },
-    "/notifications": {
-      "post": {
-        "tags": [
-          "Notifications"
-        ],
-        "summary": "Creating a new notification (Only for admin)",
-        "description": "New notification. User must be authorized",
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "requestBody": {
-          "description": "The new notification",
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/CreateNotification"
-              }
-            }
-          },
-          "required": true
-        },
-        "responses": {
-          "201": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "$ref": "#/components/schemas/CreateNotificationResponse"
-                }
-              }
-            },
-            "description": "Successfully creating the notification"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "403": {
-            "description": "You don't have access to this action!"
-          }
-        }
-      },
-      "get": {
-        "tags": [
-          "Notifications"
-        ],
-        "summary": "Get notifications",
-        "description": "The opportunity to choose notifications by type. User must be authorized",
-        "parameters": [
-          {
-            "name": "page",
-            "in": "query",
-            "description": "Page number",
-            "required": false,
-            "schema": {
-              "type": "number"
-            }
-          },
-          {
-            "name": "limit",
-            "in": "query",
-            "description": "Number of items on the page",
-            "required": false,
-            "schema": {
-              "type": "number"
-            }
-          },
-          {
-            "name": "type",
-            "in": "query",
-            "description": "Page number",
-            "required": false,
-            "schema": {
-              "type": "string"
-            }
-          }
-        ],
-        "security": [
-          {
-            "bearerAuth": []
-          }
-        ],
-        "responses": {
-          "200": {
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/CreateNotificationResponse"
-                  }
-                }
-              }
-            },
-            "description": "Successfully receiving the notifications"
-          },
-          "401": {
-            "description": "Unauthorized"
-          }
-        }
-      }
-    },
     "/api/residential_complex": {
       "get": {
         "tags": [
@@ -608,6 +506,51 @@
           }
         }
       }
+    },
+    "/chat/last_messages": {
+      "get": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "tags": [
+          "Chat"
+        ],
+        "summary": "get last N messages",
+        "parameters": [
+          {
+            "in": "query",
+            "name": "last_message_id",
+            "schema": {
+              "type": "string"
+            },
+            "required": true,
+            "description": "Id of the last message"
+          },
+          {
+            "in": "query",
+            "name": "message_count",
+            "schema": {
+              "type": "number"
+            },
+            "required": true,
+            "description": "Count of messages to load"
+          }
+        ],
+        "responses": {
+          "200": {
+            "content": {
+              "application/json": {
+                "schema": {
+                  "example": "[\n  {\n    \"_id\": \"6704370fe40bf1b76f1d4fbe\",\n    \"user_id\": \"670047e6815e371daab8ea6e\",\n    \"text\": \"HIIIII\",\n    \"images\": [],\n    \"chat_type\": \"residential_complex_chat\",\n    \"chat_id\": \"6704362330ad47b9a1403848\",\n    \"reactions\": [],\n    \"createdAt\": \"2024-10-07T19:31:27.414Z\",\n    \"updatedAt\": \"2024-10-07T19:31:27.414Z\"\n  },\n  {\n    \"_id\": \"670437544f799f6600c66634\",\n    \"user_id\": \"670047e6815e371daab8ea6e\",\n    \"text\": \"HIIIIIIIIIIII\",\n    \"images\": [],\n    \"chat_type\": \"residential_complex_chat\",\n    \"chat_id\": \"6704362330ad47b9a1403848\",\n    \"reactions\": [],\n    \"createdAt\": \"2024-10-07T19:32:36.838Z\",\n    \"updatedAt\": \"2024-10-07T19:32:36.838Z\"\n  }\n]"
+                }
+              }
+            },
+            "description": "Success"
+          }
+        }
+      }
     }
   },
   "components": {
@@ -783,58 +726,6 @@
           "message": {
             "type": "string",
             "example": "Your password has been updated successfully"
-          }
-        }
-      },
-      "CreateNotification": {
-        "type": "object",
-        "required": [
-          "text",
-          "type"
-        ],
-        "properties": {
-          "text": {
-            "type": "string",
-            "example": "We are the best residential complex"
-          },
-          "type": {
-            "type": "string",
-            "enum": [
-              "Events",
-              "Emergency"
-            ],
-            "example": "Events"
-          }
-        }
-      },
-      "CreateNotificationResponse": {
-        "type": "object",
-        "required": [
-          "text",
-          "type",
-          "residential_complex",
-          "updatedAt"
-        ],
-        "properties": {
-          "text": {
-            "type": "string",
-            "example": "We are the best residential complex"
-          },
-          "type": {
-            "type": "string",
-            "enum": [
-              "Events",
-              "Emergency"
-            ],
-            "example": "Events"
-          },
-          "residential_complex": {
-            "type": "string",
-            "example": "Sunny Quarter"
-          },
-          "updatedAt": {
-            "type": "string",
-            "example": "2024-10-01T09:38:36.240Z"
           }
         }
       },
